--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,10 @@
 name: py35
+channels:
+  - conda-forge
 dependencies:
-    - python=3.5.2
-    - scipy=0.18.0
-    - pip:
-        - sphinx==1.4.5
+  - suitesparse=4.5.3
+  - python=3.5.2
+  - cython=0.24.1
+  - scipy=0.18.0
+  - pip:
+    - sphinx==1.4.5
