--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: python
-python: ['2.7', '3.4', '3.5', '3.6']
+python: ['2.7', '3.5', '3.6']
 env:
-    - NUMPY='numpy>=1.8.0<1.9.0'
-    - NUMPY='numpy>=1.9.0<1.10.0'
-    - NUMPY='numpy>=1.10.0<1.11.0'
-    - NUMPY='numpy>=1.11.0<1.12.0'
-    - NUMPY='numpy>=1.12.0<1.13.0'
+    matrix:
+        - NUMPY_VERSION='>=1.11.0<1.12.0' SCIPY_VERSION='>=0.18<0.19'
+        - NUMPY_VERSION='>=1.11.0<1.12.0' SCIPY_VERSION='>=0.19<0.20'
+        - NUMPY_VERSION='>=1.12.0<1.13.0' SCIPY_VERSION='>=0.18<0.19'
+        - NUMPY_VERSION='>=1.12.0<1.13.0' SCIPY_VERSION='>=0.19<0.20'
 addons:
     apt:
         packages:
             - libsuitesparse-dev
 install:
-    - pip install 'setuptools>=18' $NUMPY 'scipy'
+    - pip install 'setuptools>=18' 'numpy'$NUMPY_VERSION 'scipy'$SCIPY_VERSION
     - python setup.py build_ext --inplace
 script: py.test
