--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
-python: ['2.7', '3.5', '3.6']
+python: ['3.6', '3.5', '2.7']
 env:
     matrix:
-        - NUMPY_VERSION='>=1.11.0<1.12.0' SCIPY_VERSION='>=0.18<0.19'
-        - NUMPY_VERSION='>=1.11.0<1.12.0' SCIPY_VERSION='>=0.19<0.20'
-        - NUMPY_VERSION='>=1.12.0<1.13.0' SCIPY_VERSION='>=0.18<0.19'
-        - NUMPY_VERSION='>=1.12.0<1.13.0' SCIPY_VERSION='>=0.19<0.20'
+        - NUMPY_VERSION='==1.14.*' SCIPY_VERSION='==1.0.*'
+        - NUMPY_VERSION='==1.14.*' SCIPY_VERSION='==0.19.*'
+        - NUMPY_VERSION='==1.13.*' SCIPY_VERSION='==1.0.*'
+        - NUMPY_VERSION='==1.13.*' SCIPY_VERSION='==0.19.*'
 addons:
     apt:
         packages:
