--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,10 @@
-include README
+include LICENSE.txt
+include README.md
 global-include *.h *.pyx *.mtx.gz
 graft doc
 prune doc/_build
-prune build dist
+prune build
+prune dist
 global-exclude *~ *.so *.pyc
 include versioneer.py
 include sksparse/_version.py
