--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,7 @@ versionfile_source = sksparse/_version.py
 versionfile_build = sksparse/_version.py
 tag_prefix = v
 parentdir_prefix = sksparse-
+
+[tool:pytest]
+# Don't be drowned under PendingDeprecationWarnings for np.matrix.
+filterwarnings = once::PendingDeprecationWarning
