--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,25 @@
+[tool.black]
+line-length = 120
+target_version = ['py36']
+include = '\.pyi?$'
+exclude = '''
+
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | _build
+    | buck-out
+    | build
+    | dist
+    | doc
+    | venv
+  )/
+)
+'''
 [build-system]
 requires = [
     "setuptools>=40.8.0",
