--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Run lint
       run:  black .
     - name: Test with pytest
-      run: pytest -v sksparse
+      run: pytest -v tests
 
 
   build:
@@ -80,7 +80,7 @@ jobs:
         venv-sdist/bin/python -m pip install nose pytest
         venv-sdist/bin/python -m pip install ../dist/scikit-sparse*.tar.gz
         venv-sdist/bin/python -c "import sksparse;print(sksparse.__version__)"
-        venv-sdist/bin/python -m pytest -v ../sksparse
+        venv-sdist/bin/python -m pytest -v ../tests
     - uses: actions/upload-artifact@v2
       with:
         name: dist
