--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -78,7 +78,7 @@ jobs:
         python -m venv venv-sdist
         venv-sdist/bin/python -m pip install --upgrade pip setuptools wheel
         venv-sdist/bin/python -m pip install nose pytest
-        venv-sdist/bin/python -m pip install ../dist/sksparse*.tar.gz
+        venv-sdist/bin/python -m pip install ../dist/scikit-sparse*.tar.gz
         venv-sdist/bin/python -c "import sksparse;print(sksparse.__version__)"
         venv-sdist/bin/python -m pytest -v ../tests
     - uses: actions/upload-artifact@v2
