--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,5 +29,6 @@ requires = [
     'numpy==1.14.5; python_version=="3.7"',
     'numpy==1.17.3; python_version=="3.8"',
     'numpy==1.19.3; python_version=="3.9"',
+    'numpy==1.23.1; python_version=="3.10"',
 ]
 build-backend = "setuptools.build_meta"
