--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Build
       run: |
         pip install --upgrade pip setuptools wheel
-        pip install numpy "cython<3.0"
+        pip install numpy cython
         python setup.py sdist
     - name: Test the sdist
       run: |
