--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,6 @@ requires = [
     "setuptools>=40.8.0",
     "wheel",
     "Cython>=0.22",
-    'numpy==1.13.3; python_version=="3.6"',
-    'numpy==1.14.5; python_version=="3.7"',
-    'numpy==1.17.3; python_version=="3.8"',
-    'numpy==1.19.3; python_version=="3.9"',
-    'numpy==1.23.1; python_version=="3.10"',
-    'numpy==1.23.5; python_version=="3.11"',
+    'numpy>=1.13.3; python_version>="3.6"',
 ]
 build-backend = "setuptools.build_meta"
