--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -118,6 +118,6 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: dist
-        path: dist
+        path: dist/*
     - name: Build and publish
       uses: pypa/gh-action-pypi-publish@release/v1
