--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -65,7 +65,6 @@ jobs:
     needs: [tests]
     name: Build source distribution
     runs-on: ubuntu-latest
-    if: github.event_name == 'release'
 
     steps:
     - uses: actions/checkout@v3
@@ -118,6 +117,6 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: dist
-        path: dist/*
+        path: dist
     - name: Build and publish
       uses: pypa/gh-action-pypi-publish@release/v1
