--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -82,13 +82,13 @@ jobs:
         python setup.py sdist
     - name: Test the sdist
       run: |
-        mkdir tmp  
+        mkdir tmp
         cd tmp
         python -m venv venv-sdist
         venv-sdist/bin/python -m pip install --upgrade pip setuptools wheel
         venv-sdist/bin/python -m pip install pytest
         ls ../dist
-        venv-sdist/bin/python -m pip install dist/scikit-sparse*.tar.gz
+        venv-sdist/bin/python -m pip install ../dist/scikit-sparse*.tar.gz
         venv-sdist/bin/python -c "import sksparse;print(sksparse.__version__)"
         venv-sdist/bin/python -m pytest -v ../tests
     - uses: actions/upload-artifact@v2
