--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -82,12 +82,14 @@ jobs:
         python setup.py sdist
     - name: Test the sdist
       run: |
+        mkdir tmp
+        cd tmp
         python -m venv venv-sdist
         venv-sdist/bin/python -m pip install --upgrade pip setuptools wheel
         venv-sdist/bin/python -m pip install pytest
-        venv-sdist/bin/python -m pip install dist/scikit_sparse*.tar.gz
+        venv-sdist/bin/python -m pip install ../dist/scikit_sparse*.tar.gz
         venv-sdist/bin/python -c "import sksparse;print(sksparse.__version__)"
-        venv-sdist/bin/python -m pytest -v tests
+        venv-sdist/bin/python -m pytest -v ../tests
     - uses: actions/upload-artifact@v2
       with:
         name: dist
