put if statement back

--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -65,6 +65,7 @@ jobs:
     needs: [tests]
     name: Build source distribution
     runs-on: ubuntu-latest
+    if: github.event_name == 'release'
 
     steps:
     - uses: actions/checkout@v3
