--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,5 +32,6 @@ requires = [
     'numpy>=2.0; python_version=="3.10"',
     'numpy>=2.0; python_version>="3.11"',
     'numpy>=2.0; python_version>="3.12"',
+    'numpy>=2.0; python_version>="3.13"',
 ]
 build-backend = "setuptools.build_meta"
